<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="back_button">Назад</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="shared_app_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="messageToSupport">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="supportEmail">onetwoquestion@ya.ru</string>
    <string name="subjectOfEmailToSupport">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="urlAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear">Очистить</string>


    <string name="name_of_song">Название песни</string>
    <string name="name_of_artist">Исполнитель</string>
    <string name="time_of_song">0:00</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="something_went_wrong">Проблемы со связью</string>
    <string name="something_went_wrong_description">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>

    <string name="album_cover">Обложка альбома</string>
    <string name="forward">Вперед</string>
    <string name="error">Ошибка</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="track_time">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="add_to_queue">Добавить в очередь</string>
    <string name="play">Воспроизвести</string>

    <string name="your_library_is_empty">Ваша медиатека пуста</string>
    <string name="no_playlist_found">Вы не создали \nни одного плейлиста</string>
    <string name="make_new_playlist">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="new_playlist_cover">Обложка нового плейлиста</string>
    <string name="name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="name_of_playlist">Название плейлиста</string>
    <string name="playlist_size">Количество треков</string>
    <string name="add_to_playlist">Добавить в плейлист</string>

    <string name="playlist_description">Описание плейлиста</string>
    <string name="duration_of_playlist">Длительность плейлиста</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="your_playlist_is_empty">В этом плейлисте пока нет треков</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="are_you_sure_to_delete_playlistP1">Вы уверены, что хотите удалить плейлист «</string>
    <string name="are_you_sure_to_delete_playlistP2">»?</string>
    <string name="do_you_wanna_delete_track">Хотите удалить трек?</string>
    <string name="toast_no_tracks_in_playlist_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>

    <plurals name="numberOfTracks">

        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="numberOfMinutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>