<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal"
            android:paddingStart="5dp">

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:src="@drawable/arrow_back"
                android:id="@+id/back_button"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:text="@string/settings"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <Switch
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_block_sizes"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:paddingStart="@dimen/settings_paddingLeft"
            android:text="@string/dark_theme"
            android:textSize="@dimen/settings_text_size" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_block_sizes"
            android:paddingStart="@dimen/settings_paddingLeft"
            android:paddingEnd="@dimen/settings_paddingRight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/share"

                android:scaleType="fitCenter"
                android:src="@drawable/share" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_block_sizes"
            android:paddingStart="@dimen/settings_paddingLeft"
            android:paddingEnd="@dimen/settings_paddingRight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/support"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/support"

                android:scaleType="fitCenter"
                android:src="@drawable/support" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_block_sizes"
            android:paddingStart="@dimen/settings_paddingLeft"
            android:paddingEnd="@dimen/settings_paddingRight">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/agreement"
                android:textColor="@color/black"
                android:textSize="@dimen/settings_text_size" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/agreement"

                android:scaleType="fitCenter"
                android:src="@drawable/arrow_forward" />
        </FrameLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>