<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".player.ui.activity.PlayerFragment"
    android:background="?attr/colorSecondary">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="4dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:contentDescription="@string/back_button"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back"
        app:tint="?attr/colorOnSecondary"
        android:backgroundTint="?attr/colorSecondary"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/trackCover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                android:layout_marginTop="30dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:contentDescription="@string/album_cover"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/trackName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/trackCover"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                tools:text="@string/name_of_song"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="400"
                android:textSize="22sp"
                android:textColor="?attr/colorOnSecondary"
                android:maxLines="2"
                android:ellipsize="end"/>
            <TextView
                android:id="@+id/artistName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/trackName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="12dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                tools:text="@string/name_of_artist"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="400"
                android:textSize="14sp"
                android:textColor="?attr/colorOnSecondary"
                android:maxLines="2"
                android:ellipsize="end"
                />

            <ImageButton
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/play"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/artistName"
                android:layout_marginTop="30dp"
                android:src="@drawable/play_button_100"
                android:backgroundTint="?attr/colorSecondary"
                app:tint="?attr/colorOnSecondary"
                />
            <ImageButton
                android:id="@+id/add_to_queue_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_to_queue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/play_button"
                app:layout_constraintBottom_toBottomOf="@id/play_button"
                android:src="@drawable/add_to_queue_51"
                android:layout_marginStart="24dp"
                android:backgroundTint="?attr/colorSecondary"
                />
            <ImageButton
                android:id="@+id/add_to_favorites_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/add_to_favorites"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/play_button"
                app:layout_constraintBottom_toBottomOf="@id/play_button"
                android:src="@drawable/add_to_favorites_51"
                android:layout_marginEnd="24dp"
                android:backgroundTint="?attr/colorSecondary"/>

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/play_button"
                android:text="@string/time_of_song"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"
                android:textSize="14sp"
                android:textColor="?attr/colorOnSecondary"/>




            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="16dp"
                android:id="@+id/right_guideline"/>
            <!--левый столбец с данными трека-->
            <TextView
                android:id="@+id/textview_track_time"
                style="@style/TextViewAudioPlayerActivity"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/play_button"
                app:layout_constraintBottom_toTopOf="@id/textview_collectionName"
                android:layout_marginTop="59dp"
                android:text="@string/track_time"

                />
            <TextView
                android:id="@+id/textview_collectionName"
                style="@style/TextViewAudioPlayerActivity"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/textview_track_time"
                app:layout_constraintBottom_toTopOf="@id/textview_releaseDate"
                android:text="@string/album"
                />
            <TextView
                android:id="@+id/textview_releaseDate"
                style="@style/TextViewAudioPlayerActivity"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/textview_collectionName"
                app:layout_constraintBottom_toTopOf="@id/textview_genre"
                android:text="@string/year"
                />
            <TextView
                android:id="@+id/textview_genre"
                style="@style/TextViewAudioPlayerActivity"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/textview_releaseDate"
                app:layout_constraintBottom_toTopOf="@id/textview_country"
                android:text="@string/genre"
                />
            <TextView
                android:id="@+id/textview_country"
                style="@style/TextViewAudioPlayerActivity"
                app:layout_constraintStart_toEndOf="@id/left_guideline"
                app:layout_constraintTop_toBottomOf="@id/textview_genre"
                android:text="@string/country"
                />

            <!--правый столбец с данными трека-->
            <TextView
                android:id="@+id/track_time"
                style="@style/TrackInfoAudioPlayerActivity"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@+id/play_button"
                app:layout_constraintBottom_toTopOf="@id/collectionName"
                android:layout_marginTop="59dp"
                tools:text="@string/track_time"

                />
            <TextView
                android:id="@+id/collectionName"
                style="@style/TrackInfoAudioPlayerActivity"
                app:layout_constraintStart_toEndOf="@id/textview_track_time"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/track_time"
                app:layout_constraintBottom_toTopOf="@id/releaseDate"
                tools:text="@string/album"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constrainedWidth="true"
                app:layout_constraintHorizontal_bias="1.0"
                android:layout_marginStart="24dp"
                />
            <TextView
                android:id="@+id/releaseDate"
                style="@style/TrackInfoAudioPlayerActivity"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/collectionName"
                app:layout_constraintBottom_toTopOf="@id/genre"
                tools:text="@string/year"
                />
            <TextView
                android:id="@+id/genre"
                style="@style/TrackInfoAudioPlayerActivity"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/releaseDate"
                app:layout_constraintBottom_toTopOf="@id/country"
                tools:text="@string/genre"
                />
            <TextView
                android:id="@+id/country"
                style="@style/TrackInfoAudioPlayerActivity"
                app:layout_constraintEnd_toStartOf="@id/right_guideline"
                app:layout_constraintTop_toBottomOf="@id/genre"
                tools:text="@string/country"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
