<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/make_playlist_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/make_new_playlist"
        android:textAllCaps="false"
        android:backgroundTint="?attr/colorOnSecondary"
        android:textColor="?attr/colorSecondary"
        app:cornerRadius="54dp"
        android:textSize="14sp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="500"
        android:visibility="visible"
        />
    <ImageView
        android:id="@+id/error_image_fragment_playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nothing_found"
        android:src="@drawable/ic_error_nothing_found_120"
        android:layout_marginTop="46dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="visible"
        />
    <TextView
        android:id="@+id/error_message_fragment_playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/no_playlist_found"

        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:visibility="visible"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="19sp"
        android:fontFamily="@font/ys_display_medium"
        android:textFontWeight="400"
        />

</LinearLayout>