<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue1"
        android:orientation="vertical"

        android:paddingBottom="24dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:text="@string/app_name"
            android:textSize="@dimen/textSizeMainMenu"
            android:textColor="@color/white"
            android:gravity="center_vertical"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeMainMenu"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/buttonRadius"
            app:icon="@drawable/search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_at_button"
            app:iconTint="@color/black"
            android:id="@+id/search_button"
            android:foreground="?attr/selectableItemBackground">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeMainMenu"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/buttonRadius"
            app:icon="@drawable/media_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_at_button"
            app:iconTint="@color/black"
            android:id="@+id/library_button"
            android:foreground="?attr/selectableItemBackground">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/textSizeMainMenu"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/buttonRadius"
            app:icon="@drawable/settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding_at_button"
            app:iconTint="@color/black"
            android:id="@+id/settings_button"
            android:foreground="?attr/selectableItemBackground">
        </Button>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

