<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/colorSecondary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:backgroundTint="?attr/colorSecondary"
                android:contentDescription="@string/back_button"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_arrow_back"
                android:id="@+id/back_button_SearchActivity"
                app:tint="?attr/colorOnSecondary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="12dp"
                android:text="@string/search"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="22sp"
                android:fontFamily="@font/ys_display_medium"
                android:textFontWeight="500"/>
        </LinearLayout>
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:orientation="horizontal"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingStart="14dp"
                android:hint="@string/search"
                android:textColor="@color/black"
                android:drawablePadding="5dp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_search"
                android:textCursorDrawable="@drawable/cursor_blue"
                android:inputType="text"
                style="@style/SearchEditText"
                android:background="@drawable/rounded_edittext"/>

            <ImageView
                android:id="@+id/button_clear_searchActivity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:src="@drawable/ic_clear"
                android:visibility="gone"
                style="@style/ClearButton"
                android:contentDescription="@string/clear"/>
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>